nixos/zfs: add keyScript option
Previously, dataset credentials were only able to be provided through a file on disk or a prompted password.
This is problematic for systems which want to make use of tools such as [clevis](https://github.com/latchset/clevis) to bind datasets to TPMs.
Clevis is included in this PR as a reference example.
These changes introduce the concepet of key scripts, which are run before attempting an interactive password prompt and are able to unlock the dataset.

--- a/nixos/doc/manual/release-notes/rl-2311.section.md
+++ b/nixos/doc/manual/release-notes/rl-2311.section.md
@@ -6,6 +6,8 @@
 
 - Support for WiFi6 (IEEE 802.11ax) and WPA3-SAE-PK was enabled in the `hostapd` package, along with a significant rework of the hostapd module.
 
+- ZFS now supports loading keys automatically at boot with the `boot.zfs.keyScripts` option.
+
 ## New Services {#sec-release-23.11-new-services}
 
 - [MCHPRS](https://github.com/MCHPR/MCHPRS), a multithreaded Minecraft server built for redstone. Available as [services.mchprs](#opt-services.mchprs.enable).
@@ -49,6 +51,9 @@
 - [systemd-sysupdate](https://www.freedesktop.org/software/systemd/man/systemd-sysupdate.html), atomically updates the host OS, container images, portable service images or other sources. Available as [systemd.sysupdate](opt-systemd.sysupdate).
 
 - [eris-server](https://codeberg.org/eris/eris-go). [ERIS](https://eris.codeberg.page/) is an encoding for immutable storage and this server provides block exchange as well as content decoding over HTTP and through a FUSE file-system. Available as [services.eris-server](#opt-services.eris-server.enable).
+
+- [clevis](https://github.com/latchset/clevis). Clevis is an automatic encryption framework, notable for it's full disk encryption capabilities. Available as [boot.initrd.clevis](#opt-boot.initrd.clevis.enable).
+
 
 ## Backward Incompatibilities {#sec-release-23.11-incompatibilities}
 
