nixos/bacula: Add support for TLS
Added the majority of TLS options used for transport encryption.

This uses a submodule since all resources share the same settings.

The documentation can be found under:
https://www.bacula.org/13.0.x-manuals/en/main/Bacula_TLS_Communications_E.html

--- a/nixos/doc/manual/release-notes/rl-2311.section.md
+++ b/nixos/doc/manual/release-notes/rl-2311.section.md
@@ -889,6 +889,7 @@ Make sure to also check the many updates in the [Nixpkgs library](#sec-release-2
     };
   };
   ```
+- `bacula` now allows to configure `TLS` for encrypted communication.
 
 - The `qemu-vm.nix` module by default now identifies block devices via
   persistent names available in `/dev/disk/by-*`. Because the rootDevice is
