--- a/nixos/doc/manual/release-notes/rl-2411.section.md
+++ b/nixos/doc/manual/release-notes/rl-2411.section.md
@@ -13,6 +13,9 @@
 - `authelia` has been upgraded to version 4.38. This version brings several features and improvements which are detailed in the [release blog post](https://www.authelia.com/blog/4.38-release-notes/).
   This release also deprecates some configuration keys, which are likely to be removed in future version 5.0, but they are still supported and expected to be working in the current version.
 
+- `hardware.display` is a new module implementing workarounds for misbehaving monitors
+  through setting up custom EDID files and forcing kernel/framebuffer modes.
+
 ## New Services {#sec-release-24.11-new-services}
 
 - [Open-WebUI](https://github.com/open-webui/open-webui), a user-friendly WebUI
