tracy: split the package into `tracy-wayland` and `tracy-glfw`.

--- a/nixos/doc/manual/release-notes/rl-2411.section.md
+++ b/nixos/doc/manual/release-notes/rl-2411.section.md
@@ -201,9 +201,9 @@
 
 - `/share/vim-plugins` now only gets linked if `programs.vim.enable` is enabled
 
-- The `tracy` package no longer works on X11, since it's moved to Wayland
-  support, which is the intended default behavior by Tracy maintainers.
-  X11 users have to switch to the new package `tracy-x11`.
+- The profiler from the `tracy` package no longer works on X11, since it
+  requires Wayland now, which is the intended default behavior by Tracy
+  maintainers. X11 users have to switch to the new package `tracy-glfw`.
 
 - The `services.prometheus.exporters.minio` option has been removed, as it's upstream implementation was broken and unmaintained.
   Minio now has built-in [Prometheus metrics exposure](https://min.io/docs/minio/linux/operations/monitoring/collect-minio-metrics-using-prometheus.html), which can be used instead.
