Marks ib-controller broken.

--- a/nixos/doc/manual/release-notes/rl-2411.section.md
+++ b/nixos/doc/manual/release-notes/rl-2411.section.md
@@ -101,6 +101,7 @@
 
 - Legacy package `ib-tws` can no longer connect to Interactive Brokers, so has
   been marked as broken (ref [#40784](https://github.com/NixOS/nixpkgs/issues/40784)).
+  The accompanying `ib-controller` has also been marked broken.
 
 - `androidndkPkgs` has been updated to `androidndkPkgs_26`.
 
