nixos/alsa: kill sound.enable and friends with fire

--- a/nixos/doc/manual/release-notes/rl-2411.section.md
+++ b/nixos/doc/manual/release-notes/rl-2411.section.md
@@ -197,6 +197,8 @@
 
 - `services.roundcube.maxAttachmentSize` will multiply the value set with `1.37` to offset overhead introduced by the base64 encoding applied to attachments.
 
+- The `sound` options have been removed or renamed, as they had a lot of unintended side effects. See [below](#sec-release-24.11-migration-sound) for details.
+
 - The `services.mxisd` module has been removed as both [mxisd](https://github.com/kamax-matrix/mxisd) and [ma1sd](https://github.com/ma1uta/ma1sd) are not maintained any longer.
   Consequently the package `pkgs.ma1sd` has also been removed.
 
@@ -233,3 +235,46 @@
   should be changed to using *runner authentication tokens* by configuring
   {option}`services.gitlab-runner.services.<name>.authenticationTokenConfigFile` instead of the former
   {option}`services.gitlab-runner.services.<name>.registrationConfigFile` option.
+
+## Detailed migration information {#sec-release-24.11-migration}
+
+### `sound` options removal {#sec-release-24.11-migration-sound}
+
+The `sound` options have been largely removed, as they are unnecessary for most modern setups, and cause issues when enabled.
+
+If you set `sound.enable` in your configuration:
+  - If you are using Pulseaudio or PipeWire, simply remove that option
+  - If you are not using an external sound server, and want volumes to be persisted across shutdowns, set `hardware.alsa.enablePersistence = true` instead
+
+If you set `sound.enableOSSEmulation` in your configuration:
+  - Make sure it is still necessary, as very few applications actually use OSS
+  - If necessary, set `boot.kernelModules = [ "snd_pcm_oss" ]`
+
+If you set `sound.extraConfig` in your configuration:
+  - If you are using another sound server, like Pulseaudio, JACK or PipeWire, migrate your configuration to that
+  - If you are not using an external sound server, set `environment.etc."asound.conf".text = yourExtraConfig` instead
+
+If you set `sound.mediaKeys` in your configuration:
+  - Preferably switch to handling media keys in your desktop environment/compositor
+  - If you want to maintain the exact behavior of the option, use the following snippet
+
+```nix
+services.actkbd = let
+  volumeStep = "1%";
+in {
+  enable = true;
+  bindings = [
+    # "Mute" media key
+    { keys = [ 113 ]; events = [ "key" ];       command = "${alsa-utils}/bin/amixer -q set Master toggle"; }
+
+    # "Lower Volume" media key
+    { keys = [ 114 ]; events = [ "key" "rep" ]; command = "${alsa-utils}/bin/amixer -q set Master ${volumeStep}- unmute"; }
+
+    # "Raise Volume" media key
+    { keys = [ 115 ]; events = [ "key" "rep" ]; command = "${alsa-utils}/bin/amixer -q set Master ${volumeStep}+ unmute"; }
+
+    # "Mic Mute" media key
+    { keys = [ 190 ]; events = [ "key" ];       command = "${alsa-utils}/bin/amixer -q set Capture toggle"; }
+  ];
+};
+```
