nixos/tools: add missing options in synopsis of nixos-generate-config manpage

--- a/nixos/modules/installer/tools/manpages/nixos-generate-config.8
+++ b/nixos/modules/installer/tools/manpages/nixos-generate-config.8
@@ -9,9 +9,14 @@
 .
 .Sh SYNOPSIS
 .Nm nixos-generate-config
-.Op Fl -force
-.Op Fl -root Ar root
+.Op Fl -help
 .Op Fl -dir Ar dir
+.Op Fl -root Ar root
+.Op Fl -force
+.Op Fl -no-filesystems
+.Op Fl -show-hardware-config
+.Op Fl -show-templates
+.Op Fl -template Ar template
 .
 .
 .
