--- a/nixos/doc/manual/release-notes/rl-2411.section.md
+++ b/nixos/doc/manual/release-notes/rl-2411.section.md
@@ -44,7 +44,7 @@
 
 - [Apache Tika](https://github.com/apache/tika), a toolkit that detects and extracts metadata and text from over a thousand different file types. Available as [services.tika](option.html#opt-services.tika).
 
-- [Zapret](https://github.com/bol-van/zapret), an DPI bypass tool. Available as [services.zapret](option.html#opt-services.zapret)
+- [Zapret](https://github.com/bol-van/zapret), a DPI bypass tool. Available as [services.zapret](option.html#opt-services.zapret)
 
 ## Backward Incompatibilities {#sec-release-24.11-incompatibilities}
 
